--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-{
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,23 +7,23 @@
     font-family: sans-serif;
 }
 
-body {
+body{
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #171616;
+    background-color: #000;
 }
 
-.container {
-    width: 400%;
+.container{
+    width: 400px;
     height: min-content;
-    background: #fff;
+    background-color: #fff;
     border-radius: 12px;
     padding: 28px;
 }
 
-.search-box {
+.search-box{
     width: 100%;
     height: min-content;
     display: flex;
@@ -31,30 +31,115 @@ body {
     align-items: center;
 }
 
-.search-box input {
+.search-box input{
     width: 84%;
     font-size: 20px;
     text-transform: capitalize;
     color: #000;
-    background-color: aliceblue;
-    padding: 12px 20px;
+    background-color: #e6f5fb;
+    padding: 12px 16px;
     border-radius: 14px;
 }
 
-.search-box input::placeholder {
+.search-box input::placeholder{
     color: #000;
 }
 
-.search-box button {
-    width: 46%;
+.search-box button{
+    width: 46px;
     height: 46px;
-    background-color: #fff;
-    border-radius: 56px;
+    background-color: #e6f5fb;
+    border-radius: 50%;
     cursor: pointer;
     font-size: 20px;
 }
 
-.search-box button:hover {
-    background-color: #000;
+.search-box button:hover{
     color: #fff;
+    background-color: #ababab;
+}
+
+.weather-body{
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-block: 20px;
+    display: none;
+}
+.weather-body img{
+    width: 60%;
+}
+
+.weather-box{
+    margin-block: 20px;
+    text-align: center;
+}
+
+.weather-box .temperature{
+    font-size: 40px;
+    font-weight: 800;
+    position: relative;
+}
+
+.weather-box .temperature sup{
+    font-size: 20px;
+    position: absolute;
+    font-weight: 600;
+}
+
+.weather-box .description{
+    font-size: 20px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.weather-details{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.humidity, .wind{
+    display: flex;
+    align-items: center;
+}
+
+.humidity{
+    margin-left: 20px;
+}
+
+.wind{
+    margin-right: 20px;
+}
+
+.weather-details i{
+    font-size: 36px;
+}
+
+.weather-details .text{
+    margin-left: 10px;
+    font-size: 16px;
+}
+
+.text span{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.location-not-found{
+    margin-top: 20px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.location-not-found h1{
+    font-size: 20px;
+    color: #6b6b6b;
+    margin-block-end: 15px;
+}
+.location-not-found img{
+    width: 80%;
 }
